<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"



        android:icon="@drawable/icon_bar_settings"
        android:title="Settings"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"


        android:icon="@drawable/icon_bar_play"

        android:title="Menu"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/icon_bar_hist"



        android:title="History"/>
</menu>